# uet-htsim

./: .gitignore  LICENSE-Transport-WG.txt  README.md  flake.nix  main.py  pyproject.toml
.github/workflows/: c-cpp.yml
htsim/: README.md
htsim/sim/: CMakeLists.txt  Makefile  compositequeue.cpp  compositequeue.h  dcqcn.cpp  eqds.cpp  eqds.h  eqdspacket.h  ndptunnel.cpp  network.cpp  network.h  oversubscribed_cc.cpp  oversubscribed_cc.h  parse_output.cpp  pciemodel.cpp  pciemodel.h  queue.cpp  roce.cpp  roce.h  trigger.h  uec.cpp  uec.h  uec_base.h  uec_mp.cpp  uec_mp.h  uec_pdcses.cpp  uecpacket.h
htsim/sim/datacenter/: CMakeLists.txt  Makefile  check_regressions.py  commit_check.sh  connection_matrix.cpp  connection_matrix.h  experiment1_200g_both.txt  experiment1_200g_nscc.txt  experiment1_200g_nscc_4_to_1.txt  experiment1_200g_nscc_8_to_1.txt  experiment1_200g_nscc_sleek.txt  experiment1_200g_nscc_sleek_4_to_1.txt  experiment1_200g_nscc_sleek_8_to_1.txt  experiment1_200g_rccc.txt  experiment1_200g_rccc_4_to_1.txt  experiment1_200g_rccc_8_to_1.txt  experiment1_400g_both.txt  experiment1_400g_nscc.txt  experiment1_400g_nscc_4_to_1.txt  experiment1_400g_nscc_8_to_1.txt  experiment1_400g_nscc_sleek.txt  experiment1_400g_nscc_sleek_4_to_1.txt  experiment1_400g_nscc_sleek_8_to_1.txt  experiment1_400g_rccc.txt  experiment1_400g_rccc_4_to_1.txt  experiment1_400g_rccc_8_to_1.txt  experiment1_800g_both.txt  experiment1_800g_nscc.txt  experiment1_800g_nscc_4_to_1.txt  experiment1_800g_nscc_8_to_1.txt  experiment1_800g_nscc_sleek.txt  experiment1_800g_nscc_sleek_4_to_1.txt  experiment1_800g_nscc_sleek_8_to_1.txt  experiment1_800g_rccc.txt  experiment1_800g_rccc_4_to_1.txt  experiment1_800g_rccc_8_to_1.txt  experiment1_rcv.txt  experiment1_template.txt  fat_tree_switch.cpp  fat_tree_switch.h  (+23 more)
htsim/sim/datacenter/connection_matrices/: foo.cm  foo.cm~  gen_incast.py  gen_permutation_1024n_1024c_2MB_seed0.cm  gen_permutation_1024n_1024c_2MB_seed4.cm  gen_permutation_1024n_1024c_2MB_seed8.cm  gen_permutation_1024n_200c_2MB_seed0.cm  gen_permutation_1024n_200c_2MB_seed1.cm  gen_permutation_1024n_200c_2MB_seed2.cm  gen_permutation_1024n_200c_2MB_seed4.cm  gen_permutation_1024n_200c_2MB_seed8.cm  gen_permutation_1024n_250c_2MB_seed0.cm  gen_permutation_1024n_250c_2MB_seed1.cm  gen_permutation_1024n_250c_2MB_seed2.cm  gen_permutation_1024n_250c_2MB_seed4.cm  gen_permutation_1024n_250c_2MB_seed8.cm  gen_permutation_1024n_256c_2MB_seed0.cm  gen_permutation_1024n_256c_2MB_seed4.cm  gen_permutation_1024n_256c_2MB_seed8.cm  gen_permutation_1024n_300c_2MB_seed0.cm  gen_permutation_1024n_300c_2MB_seed1.cm  gen_permutation_1024n_300c_2MB_seed2.cm  gen_permutation_1024n_300c_2MB_seed4.cm  gen_permutation_1024n_300c_2MB_seed8.cm  gen_permutation_1024n_350c_2MB_seed0.cm  gen_permutation_1024n_350c_2MB_seed1.cm  gen_permutation_1024n_350c_2MB_seed2.cm  gen_permutation_1024n_350c_2MB_seed4.cm  gen_permutation_1024n_350c_2MB_seed8.cm  gen_permutation_1024n_400c_2MB_seed0.cm  gen_permutation_1024n_400c_2MB_seed1.cm  gen_permutation_1024n_400c_2MB_seed2.cm  gen_permutation_1024n_400c_2MB_seed4.cm  gen_permutation_1024n_400c_2MB_seed8.cm  gen_permutation_1024n_450c_2MB_seed0.cm  gen_permutation_1024n_450c_2MB_seed1.cm  gen_permutation_1024n_450c_2MB_seed2.cm  gen_permutation_1024n_450c_2MB_seed4.cm  gen_permutation_1024n_450c_2MB_seed8.cm  gen_permutation_1024n_500c_2MB_seed0.cm  (+7 more)
htsim/sim/datacenter/results/: incast.plot  parse_incast_results.sh  parse_results.sh  parse_results_fail.sh
htsim/sim/datacenter/validate_outputs/: validate_load_balancing_failed_rcv.out  validate_load_balancing_failed_snd.out  validate_load_balancing_rcv.out  validate_load_balancing_snd.out  validate_uec_both.out  validate_uec_connreuse.out  validate_uec_rcv.out  validate_uec_sender.out
htsim/sim/datacenter/validation/: analysis_and_plotting.py  anlysis_and_plotting.py  example_validate.json  validate_all.py
htsim/sim/tests/: CMakeLists.txt  Makefile  main_bidir_ndp.cpp  main_dumbell_dcqcn.cpp  main_dumbell_eqds.cpp  main_dumbell_ndp.cpp  main_dumbell_ndptunnel.cpp  main_dumbell_tcp.cpp  main_dumbell_uec.cpp  main_trigger_test.cpp
